fix: Force left-align header, render correct monsters by direct ID, increase canvas res

--- a/style.css
+++ b/style.css
@@ -1514,13 +1514,13 @@ header {
   }
 
   header {
-    flex-direction: column;
     padding-top: 8px;
+    flex-wrap: wrap;
+    gap: 8px;
   }
 
   .controls {
     position: static;
-    margin-top: 8px;
   }
 
   .dq-logo-container {
